@@ -9,6 +9,11 @@
 #include <ctype.h>
 #include <limits.h>
 
+/* For pid_t */
+#ifdef HAVE_SYS_TYPES_H
+#include <sys/types.h>
+#endif
+
 #ifdef _MSC_VER
 #pragma include_alias(<eglib-config.h>, <eglib-config.hw>)
 #else
